# SUMIO

./: .gitignore  LICENSE  README_dev.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
deployment/: README_deploy.md  sumio.spec
src/: app.py  main.py
src/app/backend/: ParticipantsManager.py  bracket_editor.py  report_generator.py  tournament_manager.py
src/app/config/: constraints.py
src/app/csv_reader/: csv_reader.py
src/app/gui/: app.py  background_label.py  bracket.py  load_csv.py  menu_and_participants_list.py  pretty_button.py  quick_start.py  tournament_view.py  wrestler_profile.py
src/app/kv_templates/: app.kv  bracket.kv  load_csv.kv  main_screen.kv  participants_list.kv  pretty_button.kv  quick_start.kv  tournament_view.kv  wrestler_profile.kv
src/config/: constraints.py
src/example_package/: example.py  py.typed.py
src/example_package/csv_reader/: config.py  csv_reader.py
src/example_package/gui/: app.py
src/example_package/gui/kivy/: app.kv
src/resources/: sample.csv
tests/: test_csv_reader.py  test_example.py  test_filtering.py  test_wrestler_profile.py
