[metadata]
name = example
description =
author = SUMIO
licence = "MIT"
licence_file = LICENSE
platforms  = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    example_package
;install_requires = a_package_we_need?=2.3.1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.1
    pytest-cov>=4.1
    mypy>=1.0
    flake8>=6.1
    tox>=4.15

[options.package_data]
;this way we can indicate that a package "example_package"  is typehinted
example_package = py.typed

[flake8]
max-line-length = 160
